# Train_Scheduler

./: .gitignore  Dockerfile  How_to_run.md  Makefile  README.md  auto_run_pipeline.py  diagnose_csv.py  docker-compose.yml  pipeline.py  plan.md  pyproject.toml  railway_dashboard.py  requirements.txt  run_dashboard.sh  setup.sh  setup_and_run.py  workspace.yaml
.devcontainer/: .dockerignore  Dockerfile  Dockerfile.runtime  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
Model/: __main__.py  config.py  costs.py  dataload.py  demand.py  enhanced_scheduler.py  generate.py  geom.py  grade.py  graph.py  graph_builder.py  learn.py  requirements.txt  rolling_stock.py  scheduler.py  station_optimizer.py  station_selector.py  stations.py  test.py  yard_opt.py
Model/extractors/: __init__.py  network_parser.py  osm_railway.py  terrain_analysis.py
Model/intelligence/: railyard_optimizer.py  station_patterns.py  track_intelligence.py  train_classifier.py
Model/utils/: geo.py  ml.py
artifacts/_cache/: 20250803084854.pkl  20250803085005.pkl  20250803085011.pkl  20250803085332.pkl  20250803085702.pkl  20250803090037.pkl  20250803090040.pkl
data/: Budget.json  City-coords.json  Frequency.json  Population-per-city.json  Stations.json  Tracks.json  sample_city_data.csv
data/_boundaries/: LB-BEY.gpkg  LB-NAB.gpkg  LB-SID.gpkg  LB-TRP.gpkg  LB-TYR.gpkg
database/: epochs.json  runs.jsonl
documentation/: Contributing.md  Future_plans.md  copyright.md  how_to_run.md  math.md  pipeline.html  user_manual.md
input/: master-data.csv
notebooks/: demo.ipynb  network_visualisation.ipynb
output/: LB-BEY_tracks.geojson  LB-SID_tracks.geojson  LB-TRP_tracks.geojson  LB-TYR_tracks.geojson  railyards.json  timetable.csv
pipeline/: __init__.py  assets.py  dagster_orchestrator.py  html_report_generator.py  main.py  pipeline_initiator.py  workspace.yaml
pipeline/data_injesting/: processing_demand.py  processing_input.py  processing_terrain.py  referencing_similar_country.py
pipeline/flows/: __init__.py  full_run.py  infer_flow.py  learn_flow.py
script/: install_deps.py  run.py  train_pipeline.py
src/: __init__.py  __main__.py  bcpc_dagster.py  bcpc_pipeline.py  catalog_fetch.py  check_attributes.py  city_pipeline.py  cli.py  commuter_model.py  cost.py  cost_surface.py  demand.py  enrich.py  intercity_planner.py  io.py  logging_config.py  models.py  optimise.py  pipeline.py  report.py  routing.py  scenario_io.py  terrain.py  terrain_fallback.py
tests/: __init__.py  test_basic.py  test_main.py
visualize/: Beirut.html  Lebanon.html  index.html  lebanon_transit_network.json
(+33 files in other folders)
