[tool.poetry]
name = "bcpc"
version = "0.1.0"
description = "Bring Cities back to the People, not the Cars"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python      = "^3.11"
pandas      = "^2.2"
geopandas   = ">=0.14,<0.15"
osmnx       = {version = "^1.7", extras = ["all"]}   # â† NEW / upgrade
networkx    = "^3.2"
shapely     = "^2.0"
rasterio    = "^1.3"
scikit-learn = "^1.4"
pyomo       = "^6.7"
pulp        = "^2.8"
folium      = "^0.16"
ipyleaflet  = "^0.18"
fastapi     = "^0.111"
uvicorn     = { extras = ["standard"], version = "^0.29" }
loguru      = "^0.7"
requests    = "^2.32.4"
text-unidecode = "^1.3" 
geopy = "^2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.4"
flake8 = "^7.0"
mypy = "^1.10"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module = "src.bcpc_dagster"
requests = "^2.32"

[tool.poetry.scripts]
bcpc = "src.cli:main"
