[tool.poetry]
name = "bcpc-railway-pipeline"
version = "0.1.0"
description = "BCPC Railway Route Planning and Analysis Pipeline"
authors = ["BCPC Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
geopandas = "^0.14.0"
shapely = "^2.0.0"
rasterio = "^1.3.0"
requests = "^2.31.0"
geopy = "^2.3.0"
matplotlib = "^3.7.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
pyproj = "^3.6.0"
dagster = "^1.5.0"
dagster-webserver = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"