[tool.poetry]
name = "train-scheduler"
version = "0.1.0"
description = "Trail/Rail route plotter pipeline with learning & inference modules"
authors = ["Miguel Ibrahim <your-email@example.com>"]
license = "MIT"

packages = [
  { include = "pipeline" },
  { include = "Model" },
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.12.5"
rich = "^13.9.4"
pandas = "^2.2.3"
numpy = "^1.26.4"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"
scipy = "^1.16.1"
pyarrow = "^16.1.0"
osmnx = "^1.9.4"
networkx = "^3.3"
geopandas = "^0.14.4"
shapely = "^2.0.7"
pyproj = "^3.7.2"
fiona = "^1.10.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.17.1"

[tool.poetry.scripts]
rail = "pipeline.cli:run"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
